fix: range calendar shorcuts spacing

--- a/packages/static/src/range-calendar/styles/range-calendar-shortcuts.module.css
+++ b/packages/static/src/range-calendar/styles/range-calendar-shortcuts.module.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   max-width: 193px;
+  gap: var(--cdg-spacing-1);
   width: 100%;
   border-right: 1px solid #f5f5f5;
 }
